<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

<RelativeLayout
    android:id="@+id/listener_change_layout"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_marginTop="@dimen/width_70dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ico_login"/>

    <LinearLayout
        android:id="@+id/ll_phone"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@id/iv_logo"
        android:layout_marginTop="@dimen/width_22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/login_text_account"
            android:textStyle="bold"
            android:text="@string/account"/>

        <EditText
            android:id="@+id/et_phone_number"
            style="@style/login_input_style"
            android:maxLength="11"
            android:hint="@string/input_phoneNum_hint"
            android:inputType="phone" />

    </LinearLayout>

    <include
        layout="@layout/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_phone"/>

    <LinearLayout
        android:layout_below="@id/ll_phone"
        android:layout_marginTop="@dimen/width_10dp"
        android:id="@+id/ll_password"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/login_text_account"
            android:textStyle="bold"
            android:text="@string/password"/>
        <include
            layout="@layout/input_password_edittext"/>
    </LinearLayout>
    <include
        layout="@layout/view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/ll_password"/>

    <CheckBox
        android:id="@+id/cb_remember"
        style="@style/login_checkbox_style"
        android:layout_marginTop="@dimen/width_10dp"
        android:layout_marginRight="@dimen/width_21dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ll_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_remember_account"/>

    <Button
        android:id="@+id/resultact_btn"
        android:layout_marginTop="@dimen/width_10dp"
        android:layout_below="@id/cb_remember"
        style="@style/button_style"
        android:text="@string/button_true"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_forget"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/resultact_btn"
        android:layout_marginTop="@dimen/width_10dp"
        android:textColor="@color/colorFFB6A5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"/>


    <TextView
        android:id="@+id/tv_register"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/width_15dp"
        android:textColor="@color/colorF77C5F"
        android:textSize="@dimen/text_normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>

</RelativeLayout>
</android.support.design.widget.CoordinatorLayout>